--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -80,21 +80,19 @@ body {
     width: max-content;
     padding: 1rem 1.25rem;
     border-radius: 0 0 1.125rem 1.125rem;
-    background-image: linear-gradient(180deg, #F5E8F9 0%, #DFC8E7 49.53%, #F5E7F8 100%);
+    background-image: linear-gradient(180deg, #FFFFFF 0%, #CCC9CF 49.53%, #FFFFFF 100%);
 }
 
 .webinar-date-title {
     font-family: 'Montserrat', sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 20px;
+    font-size: 1.25rem;
+    font-weight: 500;
     color: #000000;
 }
 
 .webinar-date-date {
-    font-family: "Unbounded", Arial, sans-serif;
     font-size: 1.5rem;
-    font-weight: 500;
+    font-weight: 600;
     letter-spacing: 0;
     color: #000000;
 }
@@ -122,18 +120,6 @@ body {
     flex-grow: 1;
     padding-top: 3.5rem;
     padding-bottom: 3.5rem;
-}
-
-.webinar-title {
-    width: max-content;
-    padding: 0.625rem 1.5rem;
-    border-radius: 1.75rem;
-    font-family: "Unbounded", Arial, sans-serif;
-    font-size: 1.25rem;
-    font-weight: 500;
-    color: #34253A;
-    text-align: center;
-    background: linear-gradient(180deg, #F5E8F9 0%, #DFC8E7 49.53%, #F5E7F8 100%);
 }
 
 .webinar-main-mentor img {
@@ -166,13 +152,12 @@ body {
 }
 
 .webinar-main-title {
-    font-family: "Unbounded", sans-serif;
     font-size: 2.5rem;
-    font-weight: 500;
+    font-weight: 700;
 }
 
 .webinar-main-title span {
-    color: #9018BE
+    color: #CE9211;
 }
 
 .webinar-main-title--telegram {
@@ -208,7 +193,6 @@ body {
 }
 
 .webinar-main-text {
-    font-family: "Montserrat", sans-serif;
     font-size: 1.4rem;
     font-weight: 500;
     line-height: 2rem;
@@ -218,16 +202,37 @@ body {
     color: #FF5D5D;
 }
 
+.webinar-book-place {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem
+}
+
 .webinar-main-button {
     position: relative;
     height: 6rem;
     border-radius: 1.5rem;
-    background: linear-gradient(180deg, #A442F0 0%, #CD42F0 100%);
-    color: #FFFFFF;
+    background-color: #F5CB72;
+    color: #443412;
     transition: all 0.1s ease;
-    font-family: "Unbounded", sans-serif !important;
     font-size: 1.75rem;
+    font-weight: 700;
     line-height: 35px;
+}
+
+.webinar-price {
+    text-align: center;
+}
+
+.webinar-price span {
+    font-size: 2rem;
+    font-weight: 500;
+}
+
+.webinar-price strong {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #CE9211;
 }
 
 .webinar-telegram-button {
@@ -237,10 +242,10 @@ body {
     margin-top: 2rem;
     height: 6rem;
     border-radius: 1.5rem;
-    background: linear-gradient(180deg, #A442F0 0%, #CD42F0 100%);
-    font-size: 1.5rem;
-    color: #FFFFFF;
-    font-weight: 500;
+    background: #F5CB72;
+    font-size: 1.75rem;
+    font-weight: 700;
+    color: #443412;
     transition: all 0.1s ease;
     cursor: pointer;
     text-decoration: none;
@@ -326,7 +331,6 @@ body {
 }
 
 .form-heading {
-    font-family: "Unbounded", sans-serif;
     margin-bottom: 0.75rem;
     font-size: 1.75rem;
     color: #000000;
@@ -364,12 +368,12 @@ body {
 .form-button {
     height: 4rem;
     border-radius: 0.75rem;
-    background: linear-gradient(180deg, #A442F0 0%, #CD42F0 100%);
+    background: #F5CB72;
     font-size: 1.5rem;
-    font-family: "Unbounded", sans-serif;
-    color: #FFFFFF;
-    font-weight: 500;
+    color: #443412;
+    font-weight: 700;
     transition: all 0.1s ease;
+    text-transform: uppercase;
 }
 
 .form-button[disabled] {
@@ -398,8 +402,27 @@ body {
     padding: 1rem;
 }
 
+.mobile-price {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    padding-top: 1rem;
+}
+
+.mobile-price del {
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+
+.mobile-price strong {
+    font-size: 2rem;
+    font-weight: 700;
+    color: #CE9211;
+}
+
 .mobile-mentor-inner .webinar-main-button {
-    margin-top: -8rem;
+    margin-top: -5rem;
 }
 
 @media (min-width: 576px) {
@@ -446,7 +469,7 @@ body {
     }
 
     body {
-        background-color: #FFF4FF;
+        background-color: #ECECEC;
         background-image: none;
     }
 
@@ -461,10 +484,6 @@ body {
     .webinar-date {
         width: 100%;
         margin-right: 0;
-    }
-
-    .webinar-title {
-        margin: 0 auto;
     }
 
     .webinar-main-title {
@@ -493,6 +512,10 @@ body {
         width: 100%;
     }
 
+    .webinar-main-title--telegram {
+        text-align: center;
+    }
+
     .webinar-main-mentor {
         display: block;
     }
@@ -501,10 +524,6 @@ body {
 @media (max-width: 576px) {
     .webinar-main-mentor img {
         width: 100%;
-    }
-
-    .webinar-title {
-        background-position: 85% -2rem;
     }
 }
 
