--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -160,6 +160,10 @@ body {
     color: #CE9211;
 }
 
+.webinar-main-title strong {
+    color: #3390ec;
+}
+
 .webinar-main-ul {
     margin: 0 0 4rem;
     padding: 2.5rem 0 0;
@@ -236,10 +240,10 @@ body {
     margin-top: 2rem;
     height: 6rem;
     border-radius: 1.5rem;
-    background: #F5CB72;
+    background: #3390ec;
     font-size: 1.75rem;
     font-weight: 700;
-    color: #443412;
+    color: #FFFFFF;
     transition: all 0.1s ease;
     cursor: pointer;
     text-decoration: none;
